fix spelling overflow

--- a/src/scss/abstracts/_utilities.scss
+++ b/src/scss/abstracts/_utilities.scss
@@ -199,17 +199,17 @@ $utilities: map.merge(
     ),
     'overflow': (
       property: overflow,
-      class: oveflow,
+      class: overflow,
       values: hidden visible auto scroll,
     ),
     'overflow-x': (
       property: overflow,
-      class: oveflow,
+      class: overflow,
       values: hidden visible auto scroll clip,
     ),
     'overflow-y': (
       property: overflow,
-      class: oveflow,
+      class: overflow,
       values: hidden visible auto scroll clip,
     ),
     'width': (
